<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="cop">COP</string>
    <string name="value_to_convert">Enter value to convert</string>
    <string name="convert_to">Convert to:</string>
    <string name="currency">Currency</string>
    <string name="convert">Convert</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>

    <string-array name="currency_list">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>

    </string-array>

</resources>